@@ -185,6 +185,7 @@ enum guTRACKS_ORDER {
     guTRACKS_ORDER_TITLE,
     guTRACKS_ORDER_ARTIST,
     guTRACKS_ORDER_ALBUM,
+    guTRACKS_ORDER_GENRE,
     guTRACKS_ORDER_LENGTH,
     guTRACKS_ORDER_YEAR,
     guTRACKS_ORDER_BITRATE,
