@@ -1,4 +1,5 @@
 
+  * Added column genre to songs list box
   * Added support to flac and ogg file formats.
   * Added Lyrc.com.ar lyric search http://lirc.com.ar/
   * TaskBar Icon is created/removed if enabled/disabled from preferences
